# embrel

./: .gitignore  README  pointsxml2svg.pl
CMakeModules/: FindANN.cmake  FindCSDP.cmake  FindDSDP.cmake  FindMatio.cmake  FindNana.cmake  FindTBB.cmake
doc/: Doxyfile.in
src/: CMakeLists.txt  main.cpp  plotliks.pl
src/actions/: CMakeLists.txt  action.cpp  action.hpp  action_cfg.cpp  code_data_gen.cpp  code_data_gen.hpp  count.cpp  count.hpp
src/configuration/: CMakeLists.txt  configuration.cpp  configuration.hpp
src/flash/abstree/: CMakeLists.txt
src/flash/abstree/data/: points.xml
src/flash/abstree/src/: main.as
src/flash/abstree/src/Loaders/: xmlLoader.as
src/flash/abstree/src/Objs/: xPoint.as
src/graphs/: CMakeLists.txt  Graph.hpp  graph_cfg.cpp
src/graphs/sdf/: sdf_graph.cpp  sdf_graph.hpp  sdf_reader.cpp  sdf_reader.hpp
src/matlab/: codtest.m  config.cfg  eval_codtest.m  get_laplacian.m  write2file.m
src/tests/: CMakeLists.txt  test_rprop.cpp
src/tools/: CMakeLists.txt  arg_max.hpp  csvreader.cpp  csvreader.hpp  icp.hpp  instantiate.hpp  matlab_io.hpp  matlab_matio.hpp  normalize.hpp  progressbar.hpp  quat_helper.hpp  rcode.cpp  rcode.hpp  rprop.cpp  rprop.hpp  stats.cpp  stats.hpp  ublas_functors.hpp
